@@ -7,8 +7,8 @@
 
 SET(YARP_VERSION_MAJOR "2")
 SET(YARP_VERSION_MINOR "2")
-SET(YARP_VERSION_PATCH "5")
-SET(YARP_VERSION_MODIFIER "")
+SET(YARP_VERSION_PATCH "6")
+SET(YARP_VERSION_MODIFIER "rc0")
 
 SET(CPACK_PACKAGE_VERSION_MAJOR "${YARP_VERSION_MAJOR}")
 SET(CPACK_PACKAGE_VERSION_MINOR "${YARP_VERSION_MINOR}")
